[gd_scene load_steps=6 format=3 uid="uid://ca8vndsm2mu3p"]

[ext_resource type="Script" path="res://modles/textures/badguytest1.gd" id="1_gqcih"]
[ext_resource type="PackedScene" uid="uid://0qdgrfl2u25f" path="res://modles/textures/badguy2.tscn" id="2_nxfua"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5miud"]

[sub_resource type="SphereShape3D" id="SphereShape3D_c4e05"]
radius = 10.017

[sub_resource type="BoxShape3D" id="BoxShape3D_eu371"]
size = Vector3(1.57379, 3.01904, 1.23859)

[node name="badguytest1" type="CharacterBody3D" groups=["badguy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0580151, 0)
script = ExtResource("1_gqcih")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04884, 0)
shape = SubResource("CapsuleShape3D_5miud")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
height = 0.01

[node name="badguy2" parent="." instance=ExtResource("2_nxfua")]
transform = Transform3D(-0.179821, -0.00219704, -0.173664, -0.00305424, 0.249981, 3.24806e-09, 0.173651, 0.00212166, -0.179835, 0.042, 0.0488396, -0.006)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0488396, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_c4e05")

[node name="hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0488396, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0972595, 1.00952, -0.0273743)
shape = SubResource("BoxShape3D_eu371")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91555, 0)

[node name="deathtimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
